--- a/.gitIgnore
+++ b/.gitIgnore
@@ -89,3 +89,4 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+*.xcuserstate
